src/main/default/objects/Quiz_Player__c/Quiz_Player__c.object-meta.xml
<CustomObject>
    <label>Quiz Player</label>
    <nameField>
        <label>Nickname</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quiz Players</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>