src/main/default/objects/Quiz_Player__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <label>Score</label>
    <summarizedField>Quiz_Answer__c.Score__c</summarizedField>
    <summaryForeignKey>Quiz_Answer__c.Player__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>