src/main/default/objects/Quiz_Player__c/fields/Session__c.field-meta.xml
<CustomField>
    <fullName>Session__c</fullName>
    <label>Session</label>
    <referenceTo>Quiz_Session__c</referenceTo>
    <relationshipLabel>Quiz Players</relationshipLabel>
    <relationshipName>Quiz_Players</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>