src/main/default/objects/Quiz_Player__c/validationRules/Unique_nickname.validationRule-meta.xml
<ValidationRule>
    <fullName>Unique_nickname</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISNEW(), LOWER(Name) = LOWER(VLOOKUP($ObjectType.Quiz_Player__c.Fields.Name, $ObjectType.Quiz_Player__c.Fields.Name, Name)), $ObjectType.Quiz_Player__c.Fields.Session__c = Session__c)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Nickname must be unique</errorMessage>
</ValidationRule>